--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/wohnbauprojekt_garden_470.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View project</a></li>
+									<li><a href="https://github.com/MartinChen521/PortfolioProjects/blob/main/ＮashvilleHousing.sql" class="button large">View project</a></li>
 								</ul>
 							</article>
 
@@ -70,10 +70,10 @@
 										<h2><a href="#">Data Exploration in SQL<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/covid19.jpg" alt="" /></a>
+									<a href="https://github.com/MartinChen521/PortfolioProjects/blob/main/Covid%20Portfolio%20project%20v1.sql" class="image fit"><img src="images/covid19.jpg" alt="" /></a>
 									<p>Data Exploration of Covid 19 Dataset in SQL Server.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/MartinChen521/PortfolioProjects/blob/main/Covid%20Portfolio%20project%20v1.sql" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -82,10 +82,10 @@
 										<h2><a href="">Tableau Projects<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Feature-Photo-Tableau.png" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/guan.cheng.chen/viz/Covid_Dashboard_Practice/1_1" class="image fit"><img src="images/Feature-Photo-Tableau.png" alt="" /></a>
 									<p>My very first Tableau Dashboards.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/guan.cheng.chen/viz/Covid_Dashboard_Practice/1_1" class="button">View Project</a></li>
 									</ul>
 								</article>
 								
