--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Martin The Analyst Portfolio<br />
+						<h1>Martin Chen Portfolio<br />
 						</h1>
-						<p>Beginner Data Analyst skilled in R, Python, SQL, Excel <a href="https://www.linkedin.com/in/guan-cheng-chen-218462236/">@Martin Chen</a> 
+						<p>Beginner Data Analyst skilled in Python, SQL, Excel <a href="https://www.linkedin.com/in/guan-cheng-chen-218462236/">@Martin Chen</a> 
 
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -37,6 +37,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
+							<li><a href="AboutME.html">About Me</a></li>
 							
 						</ul>
 						<ul class="icons">
