--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Martin The Analyst</a>
+						<a href="index.html" class="logo">Martin Chen Portfolio</a>
 					</header>
 
 				<!-- Nav -->
@@ -38,7 +38,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
 							<li><a href="AboutME.html">About Me</a></li>
-							
+<!--							<li><a href="elements.html">Elements Reference</a></li>-->
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/guan-cheng-chen-218462236/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
