--- a/AboutME.html
+++ b/AboutME.html
@@ -27,8 +27,8 @@
 <!--							<li><a href="elements.html">Elements Reference</a></li>-->
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/ibrahim-jarrar-357058113/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-							<li><a href="https://github.com/IbrahimJarrarD" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/guan-cheng-chen-218462236/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://github.com/MartinChen521" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -43,7 +43,7 @@
 </p>
 								</header>
 <!--								<div class="image main"><img src="images/IMG_0665-removebg-preview.png" alt="" /></div>-->
-								<p><span class="image left"><img src="images/IMG_0665-removebg-preview.png" alt="" /></span>Hi, my name is Martin and I am currently studying full time Elektrotechnik(Electrical Enginnering) in HTW Berlin since October 2021. I hold a Bachelor's degree in Electronics and Computer Engineering, ranked 25th (National Taiwan University of Science and Technology), and currently applying  masters in several Universities for Data Science programs.
+								<p><span class="image left"><img src="IMG_5294.jpg" alt="" /></span>Hi, my name is Martin and I am currently studying full time Elektrotechnik(Electrical Enginnering) in HTW Berlin since October 2021. I hold a Bachelor's degree in Electronics and Computer Engineering, ranked 25th (National Taiwan University of Science and Technology), and currently applying  masters in several Universities for Data Science programs.
 
 At the beginning of 2022, I realized that Electrical Enginnering is not my cup of tea and I didn't know where my life was going. After some serious self-reflection about my passions and interests, I committed to learning everything I could about Data Science, Web-scrapping, and machine learning.</p>
 								<p></p>
