--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 									</ul>
 								</article>
 								
-								
+						</section>		
 						<section class="split contact">
 							<section class="alt">
-								<h3>Location</h3>
+								<h3>Address</h3>
 								<p>Balatonstraße 1<br />
-								Berlin, Germany</p>
+								10319 Berlin, Germany</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">+49 163 142 8255</a></p>
+								<p><a>(+49) 1631428255</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">martin.chen0521@gmail.com</a></p>
+								<p><a href="martin.chen0521@gmail.com">martin.chen0521@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
