--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
 								<p><a href="martin.chen0521@gmail.com">martin.chen0521@gmail.com</a></p>
 							</section>
 							<section>
+								<h3>Language Skills</h3>
+								<p><a>Native: Chinese/ Mandarin / Taiwanese</a></p><br />
+								German C1 / English C1</p>
+							</section>
+							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
 									
