--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 							</section>
 							<section>
 								<h3>Language Skills</h3>
-								<p>Native: Chinese/ Mandarin / Taiwanese<br />
+								<p>Native: Chinese/ Mandarin / Taiwanese
 								German C1 / English C1</p>
 							</section>
 							<section>
