--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 								<p><a href="martin.chen0521@gmail.com">martin.chen0521@gmail.com</a></p>
 							</section>
 							<section>
-								<h3>Language Skills</h3>
+								<h3>Languages</h3>
 								<p>Native: Chinese/ Mandarin / Taiwanese
 								German C1 / English C1</p>
 							</section>
