--- a/index.html
+++ b/index.html
@@ -89,6 +89,18 @@
 										<li><a href="https://public.tableau.com/app/profile/guan.cheng.chen/viz/Covid_Dashboard_Practice/1_1" class="button">View Project</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										
+										<h2><a href="">Excel Project- Bike Sales Dashboard<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/MartinChen521/PortfolioProjects/blob/main/Bike%20Sales%20Dataset.xlsx" class="image fit"><img src="images/Bike_Sales.jpg" alt="" /></a>
+									<p>In this porject I cleaned and formated data and created a dahsboard for visualization.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/MartinChen521/PortfolioProjects/blob/main/Bike%20Sales%20Dataset.xlsx" class="button">View Project</a></li>
+									</ul>
+								</article>
 								
 						</section>		
 						<section class="split contact">
