--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
 										<li><a href="https://github.com/MartinChen521/PortfolioProjects/blob/main/Bike%20Sales%20Dataset.xlsx" class="button">View Project</a></li>
 									</ul>
 								</article>
+							</div>
+							<footer id="footer">
+						<section>
 								
 						</section>		
 						<section class="split contact">
